--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/three": "0.156.0",
     "typescript": "^5.3.3",
     "vite": "^5.0.10"
+  },
+  "dependencies": {
+    "three": "0.152.2"
   }
 }
