--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/react": "18.2.31",
+    "@types/react-dom": "18.2.14",
     "@types/three": "0.156.0",
+    "@vitejs/plugin-react": "^4.2.1",
     "typescript": "^5.3.3",
     "vite": "^5.0.10"
   },
   "dependencies": {
     "bim-fragment": "1.0.22",
     "openbim-components": "1.1.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "three": "0.152.2",
     "web-ifc": "0.0.44"
   }
